# dbus-executor

./: Cargo.toml  README.md  net.arusahni.dbusexecutor.service
src/: executor.rs  main.rs
