[package]
name = "dbus-executor"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Launch arbitrary programs via D-Bus"

[dependencies]
nix = { version = "0.29.0", features = ["process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = "5.1.1"
